Mega Menu -- Fix overflow issue

--- a/css/core.css
+++ b/css/core.css
@@ -1302,6 +1302,7 @@ body .site-logo {
 /* Not the mega nav */
 .c-site-header__nav > ul:first-child {
     padding-block-start: var(--spacing-s-2);
+    padding-block-end: var(--spacing-s-1);
     padding-inline-end: var(--spacing-l);
 }
 
@@ -1390,7 +1391,7 @@ body .site-logo {
     height: 100%;
     width: 100%;
     content: "";
-    z-index: 1;
+    z-index: var(--z-index-nav);
     animation: 0.5s ease background-fade-in both;
     animation-delay: 0.5s;
 }
